<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RadioButton</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="hike">Hike</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="click">Click Here</string>
    <string name="button_click">Display radio button name on button click.</string>
     <string name="radio_button_click">Display radio button name on radio button click.</string>

</resources>